basic grouped permission list controller